--- a/client/package.json
+++ b/client/package.json
@@ -83,6 +83,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^14.0.1",
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular-eslint/builder": "^14.0.1",
     "@angular-eslint/eslint-plugin": "^14.0.1",
